fix: new mock setup floods AB#26812

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     restart: unless-stopped
 
   ibf-api-service:
+    container_name: ibf-api-service
     build:
       context: ./services/API-service
       args:
@@ -88,6 +89,7 @@ services:
       web-server-network:
 
   ibf-geoserver:
+    container_name: ibf-geoserver
     image: kartoza/geoserver:2.19.2
     environment:
       - GEOSERVER_ADMIN_PASSWORD=${GEOSERVER_ADMIN_PASSWORD}
