AB#26410 Make port ibf service port configurable locally

--- a/example.env
+++ b/example.env
@@ -11,6 +11,8 @@ DB_PASSWORD=
 SECRET=
 RESET_SECRET=
 NODE_ENV=
+LOCAL_PORT_IBF_SERVICE=4000 # If you do not specify a port, the default port is 3000. this only applies to the override docker-compose file
+
 # Token used to acces the water point data at https://data.waterpointdata.org/profile/edit/developer_settings
 WATERPOINTDATA_TOKEN=
 # This password is only needed for production
