--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -19,7 +19,8 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:generate": "npm run typeorm migration:generate -- -d ./appdatasource.ts",
     "migration:run": "npm run typeorm migration:run -- -d ./appdatasource.ts",
-    "migration:revert": "npm run typeorm migration:revert -- -d ./appdatasource.ts"
+    "migration:revert": "npm run typeorm migration:revert -- -d ./appdatasource.ts",
+    "migration:create": "npm run typeorm migration:create -- "
   },
   "private": true,
   "dependencies": {
