--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -40,6 +40,7 @@
     "crypto-js": "^4.0.0",
     "cryptr": "^6.0.2",
     "csv-parser": "^3.0.0",
+    "ejs": "^3.1.9",
     "jsonwebtoken": "^8.1.1",
     "mailchimp-api-v3": "^1.15.0",
     "mysql": "^2.15.0",
