--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.14.0",
     "csv-parser": "^3.0.0",
+    "ejs": "^3.1.9",
     "jsonwebtoken": "^8.1.1",
     "mailchimp-api-v3": "^1.15.0",
     "mysql": "^2.15.0",
