--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -39,6 +39,7 @@
     "csv-parser": "^3.0.0",
     "ejs": "^3.1.9",
     "jsonwebtoken": "^8.1.1",
+    "juice": "^10.0.0",
     "mailchimp-api-v3": "^1.15.0",
     "mysql": "^2.15.0",
     "passport": "^0.4.1",
