--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -24,7 +24,9 @@
     "test:dev": "ng test",
     "test:only": "ng test --no-watch --browsers=ChromeHeadless",
     "test": "npm run lint && npm run test:only",
-    "postinstall": "ngcc --tsconfig \"tsconfig.json\""
+    "postinstall": "ngcc --tsconfig \"tsconfig.json\"",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@angular/common": "~13.4.0",
@@ -64,6 +66,7 @@
     "@angular/compiler": "~13.4.0",
     "@angular/compiler-cli": "~13.4.0",
     "@angular/language-service": "~13.4.0",
+    "@cypress/schematic": "^2.4.0",
     "@ionic/cli": "^6.12.4",
     "@types/jasmine": "~3.6.2",
     "@types/jasminewd2": "~2.0.3",
@@ -86,6 +89,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "typescript": "^4.6.4",
-    "xlsx": "^0.17.5"
+    "xlsx": "^0.17.5",
+    "cypress": "latest"
   }
 }
