--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -69,16 +69,15 @@
     "@cypress/schematic": "^2.4.0",
     "@ionic/cli": "^6.12.4",
     "@types/jasmine": "~3.6.2",
-    "@types/jasminewd2": "~2.0.3",
     "@types/leaflet": "^1.5.21",
     "@types/leaflet.markercluster": "^1.4.3",
     "@types/luxon": "^1.26.2",
     "@types/node": "^14.0.22",
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
+    "cypress": "latest",
     "eslint": "^8.17.0",
     "jasmine-core": "~3.7.1",
-    "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -86,10 +85,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "2.2.1",
     "prettier-plugin-organize-imports": "^2.3.4",
-    "protractor": "~7.0.0",
-    "ts-node": "~9.1.1",
     "typescript": "^4.6.4",
-    "xlsx": "^0.17.5",
-    "cypress": "latest"
+    "xlsx": "^0.17.5"
   }
 }
