AB#27263 First setup api test: uga floods

--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -16,6 +16,8 @@
     "test": "jest --config=jest.json --detectOpenHandles --forceExit --passWithNoTests",
     "test:dev": "npm test -- --watchAll",
     "test:coverage": "npm test -- --coverage --coverageDirectory=coverage",
+    "test:api:all": "node --expose-gc node_modules/.bin/jest --config=jest.api.config.js --runInBand --detectOpenHandles --logHeapUsage",
+    "test:api:watch": "npm run test:api:all -- --watchAll",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:generate": "npm run typeorm migration:generate -- -d ./appdatasource.ts",
     "migration:run": "npm run typeorm migration:run -- -d ./appdatasource.ts",
