chore: add comment to example.env

--- a/example.env
+++ b/example.env
@@ -28,7 +28,7 @@ GEOSERVER_ADMIN_PASSWORD=
 
 # interfaces/IBF-dashboard
 NG_CONFIGURATION=
-NG_API_URL=
+NG_API_URL=  # URL should not end with trailing slash
 NG_USE_SERVICE_WORKER=
 NG_GEOSERVER_URL=
 NG_IBF_SYSTEM_VERSION=
