--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -55,6 +55,7 @@
     "wkt-io-ts": "^1.0.2"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^26.0.20",
     "@types/node": "16.x",
