style: use import aliases to make imports readable

--- a/services/API-service/tsconfig.json
+++ b/services/API-service/tsconfig.json
@@ -16,9 +16,14 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "baseUrl": "./",
+    "paths": {
+      "@api/*": ["./src/api/*"],
+      "@scripts/*": ["./src/scripts/*"],
+      "@shared/*": ["./src/shared/*"]
+    },
     "skipLibCheck": true
   },
-  "watchOptions": { 
+  "watchOptions": {
     "watchFile": "fixedPollingInterval",
     "excludeDirectories": ["node_modules", "dist"],
     "excludeFiles": ["**/*.json"]
