--- a/interfaces/IBF-dashboard/angular.json
+++ b/interfaces/IBF-dashboard/angular.json
@@ -298,6 +298,12 @@
     },
     "@ionic/angular-toolkit:page": {
       "styleext": "scss"
+    },
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
     }
   }
 }
