--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -24,59 +24,59 @@
     "test:dev": "ng test",
     "test:only": "ng test --no-watch --browsers=ChromeHeadless",
     "test": "npm run lint && npm run test:only",
-    "postinstall": "ngcc --tsconfig \"tsconfig.json\"",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
   },
   "dependencies": {
-    "@angular/common": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/forms": "^16.2.12",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/router": "^16.2.12",
-    "@angular/service-worker": "^16.2.12",
-    "@asymmetrik/ngx-leaflet": "^8.1.0",
-    "@asymmetrik/ngx-leaflet-markercluster": "^5.0.1",
+    "@angular/common": "^17.3.11",
+    "@angular/core": "^17.3.11",
+    "@angular/forms": "^17.3.11",
+    "@angular/platform-browser": "^17.3.11",
+    "@angular/platform-browser-dynamic": "^17.3.11",
+    "@angular/router": "^17.3.11",
+    "@angular/service-worker": "^17.3.11",
+    "@asymmetrik/ngx-leaflet": "^17.0.0",
+    "@asymmetrik/ngx-leaflet-markercluster": "^17.0.0",
     "@auth0/angular-jwt": "^5.0.1",
     "@ionic/angular": "^6.7.5",
     "@microsoft/applicationinsights-web": "^2.5.11",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@turf/center": "^6.0.1",
     "@turf/invariant": "^6.1.2",
     "dotenv": "^16.0.1",
     "gzipper": "^7.2.0",
-    "leaflet": "^1.6.0",
-    "leaflet.markercluster": "^1.4.1",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "luxon": "^1.26.0",
     "rxjs": "~6.6.0",
     "tsconfig": "^7.0.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.13.3"
+    "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.14",
-    "@angular-eslint/builder": "16.3.1",
-    "@angular-eslint/eslint-plugin": "16.3.1",
-    "@angular-eslint/eslint-plugin-template": "16.3.1",
-    "@angular-eslint/schematics": "16.3.1",
-    "@angular-eslint/template-parser": "16.3.1",
-    "@angular/cli": "^16.2.14",
-    "@angular/compiler": "^16.2.12",
-    "@angular/compiler-cli": "^16.2.12",
-    "@angular/language-service": "^16.2.12",
+    "@angular-devkit/build-angular": "^17.3.8",
+    "@angular-eslint/builder": "17.5.2",
+    "@angular-eslint/eslint-plugin": "17.5.2",
+    "@angular-eslint/eslint-plugin-template": "17.5.2",
+    "@angular-eslint/schematics": "17.5.2",
+    "@angular-eslint/template-parser": "17.5.2",
+    "@angular/cli": "^17.3.8",
+    "@angular/compiler": "^17.3.11",
+    "@angular/compiler-cli": "^17.3.11",
+    "@angular/language-service": "^17.3.11",
     "@cypress/schematic": "^2.4.0",
     "@ionic/cli": "^6.12.4",
     "@types/jasmine": "~3.6.2",
-    "@types/leaflet": "^1.5.21",
-    "@types/leaflet.markercluster": "^1.4.3",
+    "@types/leaflet": "^1.9.12",
+    "@types/leaflet.markercluster": "^1.5.4",
     "@types/luxon": "^1.26.2",
     "@types/node": "^14.0.22",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "cypress": "latest",
-    "eslint": "^8.39.0",
+    "esbuild": "^0.23.0",
+    "eslint": "^8.57.0",
     "jasmine-core": "~3.7.1",
     "karma": "^6.1.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -85,7 +85,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "2.2.1",
     "prettier-plugin-organize-imports": "^2.3.4",
-    "typescript": "^4.9.5",
+    "typescript": "^5.4.5",
     "xlsx": "^0.17.5"
   }
 }
