--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -15,11 +15,11 @@
     "ng": "ng",
     "postbuild:prod": "npm run compress",
     "prebuild": "npm run set-env-variables",
-    "prestart": "npm install --no-optional --no-audit --no-fund",
+    "prestart": "npm install --no-audit --no-fund",
     "serve:static": "cp www/index.html www/404.html && npx http-server www/ -c-1 --gzip",
     "set-env-variables": "node ./_set-env-variabes.js",
-    "start": "ng serve --port=4200 --host=0.0.0.0 --disable-host-check",
-    "start:no-install": "ng serve --port=4200 --host=0.0.0.0 --disable-host-check",
+    "start": "ng serve --port=4200",
+    "start:no-install": "ng serve --port=4200",
     "start:prod": "npm run build:prod && npm run serve:static",
     "test:dev": "ng test",
     "test:only": "ng test --no-watch --browsers=ChromeHeadless",
@@ -28,16 +28,16 @@
     "cypress:run": "cypress run"
   },
   "dependencies": {
-    "@angular/common": "^17.3.11",
-    "@angular/core": "^17.3.11",
-    "@angular/forms": "^17.3.11",
-    "@angular/platform-browser": "^17.3.11",
-    "@angular/platform-browser-dynamic": "^17.3.11",
-    "@angular/router": "^17.3.11",
-    "@angular/service-worker": "^17.3.11",
-    "@asymmetrik/ngx-leaflet": "^17.0.0",
-    "@asymmetrik/ngx-leaflet-markercluster": "^17.0.0",
+    "@angular/common": "^18.1.0",
+    "@angular/core": "^18.1.0",
+    "@angular/forms": "^18.1.0",
+    "@angular/platform-browser": "^18.1.0",
+    "@angular/platform-browser-dynamic": "^18.1.0",
+    "@angular/router": "^18.1.0",
+    "@angular/service-worker": "^18.1.0",
     "@auth0/angular-jwt": "^5.0.1",
+    "@bluehalo/ngx-leaflet": "^18.0.2",
+    "@bluehalo/ngx-leaflet-markercluster": "^18.0.1",
     "@ionic/angular": "^6.7.5",
     "@microsoft/applicationinsights-web": "^2.5.11",
     "@ngx-translate/core": "^15.0.0",
@@ -55,19 +55,20 @@
     "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular-eslint/builder": "17.5.2",
-    "@angular-eslint/eslint-plugin": "17.5.2",
-    "@angular-eslint/eslint-plugin-template": "17.5.2",
-    "@angular-eslint/schematics": "17.5.2",
-    "@angular-eslint/template-parser": "17.5.2",
-    "@angular/cli": "^17.3.8",
-    "@angular/compiler": "^17.3.11",
-    "@angular/compiler-cli": "^17.3.11",
-    "@angular/language-service": "^17.3.11",
+    "@angular-devkit/build-angular": "^18.1.0",
+    "@angular-eslint/builder": "18.1.0",
+    "@angular-eslint/eslint-plugin": "18.1.0",
+    "@angular-eslint/eslint-plugin-template": "18.1.0",
+    "@angular-eslint/schematics": "18.1.0",
+    "@angular-eslint/template-parser": "18.1.0",
+    "@angular/cli": "^18.1.0",
+    "@angular/compiler": "^18.1.0",
+    "@angular/compiler-cli": "^18.1.0",
+    "@angular/language-service": "^18.1.0",
     "@cypress/schematic": "^2.4.0",
     "@ionic/cli": "^6.12.4",
-    "@types/jasmine": "~3.6.2",
+    "@rollup/rollup-darwin-arm64": "^4.18.1",
+    "@types/jasmine": "^5.1.4",
     "@types/leaflet": "^1.9.12",
     "@types/leaflet.markercluster": "^1.5.4",
     "@types/luxon": "^1.26.2",
@@ -77,12 +78,12 @@
     "cypress": "latest",
     "esbuild": "^0.23.0",
     "eslint": "^8.57.0",
-    "jasmine-core": "~3.7.1",
-    "karma": "^6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "jasmine-core": "^5.1.2",
+    "karma": "^6.4.3",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "prettier": "2.2.1",
     "prettier-plugin-organize-imports": "^2.3.4",
     "typescript": "^5.4.5",
