ci: separate lint and test in dashboard

--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -23,7 +23,7 @@
     "start:prod": "npm run build:prod && npm run serve:static",
     "test:dev": "ng test",
     "test:only": "ng test --no-watch --browsers=ChromeHeadless",
-    "test": "npm run lint && npm run test:only",
+    "test": "npm run test:only",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
   },
