--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - ${LOCAL_PORT_IBF_SERVICE}:3000
     depends_on:
-      - ibf-local-db
+      - ibf-db
     networks:
       - web-server-network
       - api-network
@@ -20,7 +20,7 @@ services:
     ports:
       - 8081:8080
 
-  ibf-local-db:
+  ibf-db:
     image: postgis/postgis
     environment:
       - POSTGRES_USER=${DB_USERNAME}
@@ -28,7 +28,7 @@ services:
       - POSTGRES_DB=${DB_DATABASE}
     volumes:
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ibf-local-db-data:/var/lib/postgresql/data
+      - ibf-db-data:/var/lib/postgresql/data
     ports:
       - 5437:5432
     networks:
@@ -36,5 +36,5 @@ services:
     restart: unless-stopped
 
 volumes:
-  ibf-local-db-data:
+  ibf-db-data:
   api_service_node_modules:
