--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -4,7 +4,7 @@
   "homepage": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint \"**/*.ts\"",
+    "lint": "npx eslint \"**/*.ts\"",
     "format:fix": "npm run lint:syntax -- --write",
     "lint:syntax": "prettier --check \"**/*.{md,js,ts,scss,html}\" ",
     "prestart": "npm run migration:run && ts-node src/scripts seed-prod",
