--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -75,6 +75,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci --no-audit
+      - run: npm run lint
       - run: npm test
       - run: docker build . --file Dockerfile --tag ibf-dashboard:$(date +%s)
 
