--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -22,8 +22,7 @@
     "start:no-install": "ng serve --port=4200",
     "start:prod": "npm run build:prod && npm run serve:static",
     "test:dev": "ng test",
-    "test:only": "ng test --no-watch --browsers=ChromeHeadless",
-    "test": "npm run lint && npm run test:only",
+    "test": "npm run test:dev -- --no-watch --browsers=ChromeHeadless",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
   },
