Revert "ci: prefix eslint with npx"
This reverts commit 4618eeea098f4d4ef6e6f47f0a7c3900558b119c.

--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -4,7 +4,7 @@
   "homepage": "",
   "main": "index.js",
   "scripts": {
-    "lint": "npx eslint \"**/*.ts\"",
+    "lint": "eslint \"**/*.ts\"",
     "format:fix": "npm run lint:syntax -- --write",
     "lint:syntax": "prettier --check \"**/*.{md,js,ts,scss,html}\" ",
     "prestart": "npm run migration:run && ts-node src/scripts seed-prod",
