chore: update package json to trigger workflow

--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ibf-api-service",
   "author": "IBF-system",
-  "homepage": "",
+  "homepage": "https://ibf.510.global/docs",
   "main": "index.js",
   "scripts": {
     "lint": "eslint \"**/*.ts\"",
