--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -53,8 +53,7 @@
     "slug": "^4.0.2",
     "twilio": "^3.83.1",
     "typeorm": "^0.3.6",
-    "typescript": "^4.9.5",
-    "wkt-io-ts": "^1.0.2"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
