build: remove duplicate port variable

--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -18,8 +18,8 @@
     "prestart": "npm install --no-audit --no-fund",
     "serve:static": "cp www/index.html www/404.html && npx http-server www/ -c-1 --gzip",
     "set-env-variables": "node ./_set-env-variabes.js",
-    "start": "ng serve --port=4200",
-    "start:no-install": "ng serve --port=4200",
+    "start": "ng serve",
+    "start:no-install": "ng serve",
     "start:prod": "npm run build:prod && npm run serve:static",
     "test:dev": "ng test",
     "test": "npm run test:dev -- --no-watch --browsers=ChromeHeadless",
