ci: add angular file replacements for NG_CONFIGURATION

--- a/interfaces/IBF-dashboard/.gitignore
+++ b/interfaces/IBF-dashboard/.gitignore
@@ -8,7 +8,8 @@
 
 # Configuration, secrets, etc:
 .env
-environment.prod.ts
+environment.*
+!environment.template.ts
 
 
 # Assets ONLY included during build
