--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "ng build",
     "build:prod": "npm run build -- --configuration production",
-    "compress": "gzipper compress --skip-compressed --remove-larger --gzip --gzip-level 9 ./www/",
+    "compress": "gzipper compress --skip-compressed --remove-larger --gzip --gzip-level 9 ./www/browser/",
     "e2e": "ng e2e",
     "format:fix": "npm run format:check -- --write",
     "format:check": "prettier --check \"**/*.{md,js,ts,scss,html}\" ",
@@ -16,7 +16,7 @@
     "postbuild:prod": "npm run compress",
     "prebuild": "npm run set-env-variables",
     "prestart": "npm install --no-audit --no-fund",
-    "serve:static": "cp www/index.html www/404.html && npx http-server www/ -c-1 --gzip",
+    "serve:static": "cp www/browser/index.html www/browser/404.html && npx http-server www/browser/ -c-1 --gzip",
     "set-env-variables": "node ./_set-env-variabes.js",
     "start": "ng serve",
     "start:no-install": "ng serve",
