--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -45,6 +45,7 @@
     "juice": "^10.0.0",
     "mailchimp-api-v3": "^1.15.0",
     "mjml": "^4.15.3",
+    "moment": "^2.30.1",
     "mysql": "^2.15.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
