--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -66,6 +66,9 @@
     "@angular/language-service": "^18.1.0",
     "@cypress/schematic": "^2.4.0",
     "@ionic/cli": "^6.12.4",
+    "@tailwindcss/aspect-ratio": "latest",
+    "@tailwindcss/forms": "latest",
+    "@tailwindcss/line-clamp": "latest",
     "@types/jasmine": "^5.1.4",
     "@types/leaflet": "^1.9.12",
     "@types/leaflet.markercluster": "^1.5.4",
@@ -73,6 +76,7 @@
     "@types/node": "^20.14.10",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
+    "autoprefixer": "^10.4.7",
     "cypress": "latest",
     "esbuild": "^0.23.0",
     "eslint": "^8.57.0",
@@ -82,8 +86,12 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
+    "ngx-tailwind": "^4.0.0",
+    "postcss": "^8.4.14",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "tailwindcss": "^3.1.6",
     "typescript": "^5.4.5",
     "xlsx": "^0.17.5"
   }
