Change title & remove unused script

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "lint": "eslint \"**/*.{ts,js}\"",
     "fix": "npm run lint -- --fix",
-    "test": "playwright test",
-    "test:portalicious": "playwright test --config=playwright.portalicious.config.ts"
+    "test": "playwright test"
   },
   "keywords": [],
   "author": "",
