--- a/example.env
+++ b/example.env
@@ -71,3 +71,13 @@ TWILIO_SID=
 TWILIO_AUTHTOKEN=
 TWILIO_MESSAGING_SID=
 TWILIO_WHATSAPP_NUMBER=+
+
+# Playwright configuration
+AZURE_DEV_URL=
+AZURE_DEVOPS_TOKEN=
+BASE_URL=http://localhost:4200
+BASE_URL_IBF_SERVICE=
+
+# Playwright users for testing
+USERCONFIG_MALAWI_EMAIL=malawi@redcross.nl
+USERCONFIG_MALAWI_PASSWORD=password
