--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -60,6 +60,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^26.0.20",
     "@types/node": "16.x",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "atob": ">=2.1.0",
