--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -22,9 +22,7 @@
     "start:no-install": "ng serve",
     "start:prod": "npm run build:prod && npm run serve:static",
     "test:dev": "ng test",
-    "test": "npm run test:dev -- --no-watch --browsers=ChromeHeadless",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "test": "npm run test:dev -- --no-watch --browsers=ChromeHeadless"
   },
   "dependencies": {
     "@angular/common": "^18.1.0",
@@ -64,7 +62,6 @@
     "@angular/compiler": "^18.1.0",
     "@angular/compiler-cli": "^18.1.0",
     "@angular/language-service": "^18.1.0",
-    "@cypress/schematic": "^2.4.0",
     "@ionic/cli": "^6.12.4",
     "@tailwindcss/aspect-ratio": "latest",
     "@tailwindcss/forms": "latest",
@@ -77,7 +74,6 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "autoprefixer": "^10.4.7",
-    "cypress": "latest",
     "esbuild": "^0.23.0",
     "eslint": "^8.57.0",
     "jasmine-core": "^5.1.2",
