Add working directory

--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -39,6 +39,7 @@ jobs:
         run: 'npm run lint'
 
       - name: Set ENV-variables for test-environment
+        working-directory: ./
         run: |
           cp env.example .env
 
