Check correct path

--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -42,7 +42,8 @@ jobs:
       - name: Set ENV-variables for test-environment
         run: |
           pwd
-          cp env.example .env
+          ls -alh
+          cp $GITHUB_WORKSPACE/env.example .env  # Adjust the path if needed
 
       - name: Run Services with Docker
         working-directory: ./
