--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -41,9 +41,7 @@ jobs:
 
       - name: Set ENV-variables for test-environment
         run: |
-          pwd
-          ls -alh
-          cp $GITHUB_WORKSPACE/env.example .env  # Adjust the path if needed
+          cp example.env .env
 
       - name: Run Services with Docker
         working-directory: ./
