Change start services command

--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Run Services with Docker
         working-directory: ./
         run: |
-          docker --log-level 'warn' compose -f docker-compose.yml up -d --quiet-pull --wait --wait-timeout 300
+          docker compose up -d
 
       - name: Start Interface
         working-directory: ./
