Avoid logs after interface is up

--- a/.github/workflows/test_e2e_ibf_system.yml
+++ b/.github/workflows/test_e2e_ibf_system.yml
@@ -53,7 +53,7 @@ jobs:
         env:
           NG_API_URL: http://localhost:4000/api
         run: |
-          npm run start:interface
+          npm run start:interface &
 
       - name: Install E2E-Tests runtime-dependencies
         working-directory: ${{ env.e2eTestsPath }}
